<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundtiles16_9"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/squigly"
            android:src="@drawable/sg_squ_select" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/big_band"
            android:src="@drawable/sg_big_select" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/eliza"
            android:src="@drawable/sg_eli_select" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/miss_fortune"
            android:src="@drawable/sg_msf_select" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/peacock"
            android:src="@drawable/sg_pea_select" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/painwheel"
            android:src="@drawable/sg_pwl_select" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/filia"
            android:src="@drawable/sg_fil_select" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/app_name"
            android:src="@drawable/centrepiece" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/cerebella"
            android:src="@drawable/sg_cer_select" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/valentine"
            android:src="@drawable/sg_val_select" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/parasoul"
            android:src="@drawable/sg_par_select" />

        <ImageButton
            android:id="@+id/imageButton11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/dbl"
            android:src="@drawable/sg_dbl_select" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <ImageButton
            android:id="@+id/imageButton12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/fukua"
            android:src="@drawable/sg_fuk_select" />

        <ImageButton
            android:id="@+id/imageButton13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/beowulf"
            android:src="@drawable/sg_beo_select" />

        <ImageButton
            android:id="@+id/imageButton14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/robo_fortune"
            android:src="@drawable/sg_rfo_select" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <ImageButton
            android:id="@+id/imageButton15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/umbrella"
            android:src="@drawable/sg_umb_select" />

        <ImageButton
            android:id="@+id/imageButton16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/annie"
            android:src="@drawable/sg_ann_select" />

        <ImageButton
            android:id="@+id/imageButton17"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/black_dahlia"
            android:src="@drawable/sg_dhl_select" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>