<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundtiles16_9"
    android:orientation="vertical"
    android:weightSum="3">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ComboRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/black"
        android:orientation="vertical"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/damage_sort_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/order_by_damage"
                android:textColor="@color/black"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/starter_sort_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/order_by_starter"
                android:textColor="@color/black"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <EditText
            android:id="@+id/insert_notation_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/insert_combo_notation_here"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@android:color/holo_orange_light"
            android:textColorHint="@android:color/holo_orange_light"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/insert_damage_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/insert_damage_here"
                android:importantForAutofill="no"
                android:textColor="@android:color/holo_orange_light"
                android:textColorHint="@android:color/holo_orange_light"
                tools:ignore="LabelFor"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/add_combo_to_database_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_combo_to_database"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>